# margo

./: .gitignore  LICENSE  README.md  readme-installation.txt  readme.txt
binaries/: readme.txt
data/: readme.txt
data/hfz/: 85_44.hfz  lks94.prj
data/xyz/: 85_44_selectionsDB.xyz
doc/: changes.txt  filters.txt  how_to_classify.txt
gui/: .gitignore  analysis-g.ipynb  chatgpt_test.py  compile.bat  explore.py  explore.spec  layout.bck.ini  layout.ini  licence.txt  pyproject.toml  requirements.txt
gui/classifiers/: good_bad.py  knn.py  knnlin.py  linear.py  logistic.py  proximity.py  spectral.py  svm.py  svm_g.py
gui/core/: call_convert_shp.py  call_margo.py  checkbox_dialog.py  classifier.py  classifier_form.py  classifier_form.ui  classifier_form_ui.py  config.py  gdal_interface.py  gmaps_browser.py  lks_wgs.py  open_street_map_browser.py  print_args  surface_browser.py  xyz.py
gui/etc/: .gitignore  gmaps_template.html~  last_map.html  open_street_map_template.html
gui/notebooks/: analysis-g.ipynb  analysis.ipynb  cropper.ipynb  load_data.ipynb
gui/utils/: get_sheet.py  rescore.py  zip.py
libhfz/: license.txt
margo/: MConstraints.cpp  MConstraints.h  MCoordDB.cpp  MGeom.cpp  MImage.h  MObject.cpp  MProcessor.h  MRadialFilter.h  main.cpp  makefile  readme_convert.txt  run_batch  utils.cpp
releases/: margo-installer.nsi  readme.txt
shapelib/shapelib-1.3.0/: .gitignore
templates/masks2/: 00.txt  01.txt  04.txt  05.txt  06.txt  07.txt  08.txt  10.txt
templates/t0000/: FR0.txt  FR10.txt  FR100.txt  FR101.txt  FR107.txt  FR11.txt  FR110.txt  (+89 more)
(+332 files in other folders)
