[tool.poetry]
name = "margo-gui"
version = "0.8.0"
description = "GUI interface for Margo"
authors = ["Valentas Kurauskas <valentas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5"
PyQt6-WebEngine = "^6.5"
matplotlib = "^3.7"
scikit-learn = "^1.2"
numpy = "^1.24"
GDAL = "3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
